--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsSecurity/LvsLogin.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsSecurity/LvsLogin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng nhập - Electro Store</title>
+    <title>Đăng nhập - WeJect</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -26,7 +26,7 @@
     <div class="w-full max-w-md">
         <div class="text-center mb-8">
             <a href="/" class="text-white text-5xl font-bold tracking-tighter inline-block">
-                electro<span class="text-[#fed700]">.</span>
+                WeJect<span class="text-[#fed700]">.</span>
             </a>
             <p class="text-gray-400 mt-2">Đăng nhập vào tài khoản của bạn</p>
         </div>
